Fix navigation links in dashboard and error pages; update task scheduler link

--- a/web/errors.html
+++ b/web/errors.html
@@ -50,7 +50,7 @@
                         <button class="btn btn-outline-primary" onclick="refreshErrors()">
                             <i class="fas fa-sync-alt"></i> Refresh
                         </button>
-                        <a href="/" class="btn btn-outline-secondary">
+                        <a href="/task-scheduler" class="btn btn-outline-secondary">
                             <i class="fas fa-arrow-left"></i> Back to Dashboard
                         </a>
                     </div>
