--- a/web/index.html
+++ b/web/index.html
@@ -82,13 +82,13 @@
                 <div class="d-flex justify-content-between align-items-center mb-4">
                     <h1 class="h2 mb-0">
                         <i class="fas fa-tasks text-primary"></i>
-                        TaskScheduler Dashboard
+                        TaskScheduler Dashboardfds
                     </h1>
                     <div>
                         <button class="btn btn-outline-primary me-2" onclick="refreshData()">
                             <i class="fas fa-sync-alt"></i> Refresh
                         </button>
-                        <a href="/errors" class="btn btn-outline-danger">
+                        <a href="task-scheduler/errors" class="btn btn-outline-danger">
                             <i class="fas fa-exclamation-triangle"></i> View Errors
                         </a>
                     </div>
