--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="version.js"></script>
     <style>
         .status-light {
             width: 20px;
@@ -82,7 +83,8 @@
                 <div class="d-flex justify-content-between align-items-center mb-4">
                     <h1 class="h2 mb-0">
                         <i class="fas fa-tasks text-primary"></i>
-                        TaskScheduler Dashboardfds
+                        TaskScheduler Dashboard 
+                        <span id="version">v1.0.0</span>
                     </h1>
                     <div>
                         <button class="btn btn-outline-primary me-2" onclick="refreshData()">
